--- a/app2/pom.xml
+++ b/app2/pom.xml
@@ -10,4 +10,22 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                  <archive>
+                    <manifest>
+                        <mainClass>com.mycompany.app2.App2</mainClass>
+                    </manifest>
+                  </archive>
+                </configuration>
+           </plugin>
+        </plugins>
+    </build>
+    
 </project>
