--- a/app2/pom.xml
+++ b/app2/pom.xml
@@ -9,7 +9,36 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <junit.jupiter.version>5.4.2</junit.jupiter.version>
     </properties>
+    
+    <dependencies>
+         <dependency> 
+    		<groupId>org.apache.logging.log4j</groupId> 
+    		<artifactId>log4j-slf4j-impl</artifactId> 
+    		<!-- et indirectement slf4j-api , log4j-api , log4j-core -->
+    		<version>2.11.1</version> 
+         </dependency>
+         
+         <dependency>
+    		<groupId>org.junit.jupiter</groupId>
+    		<artifactId>junit-jupiter-api</artifactId>
+    		<version>${junit.jupiter.version}</version>
+    		<scope>test</scope>
+		</dependency>
+		<dependency>
+    		<groupId>org.junit.jupiter</groupId>
+    		<artifactId>junit-jupiter-params</artifactId>
+    		<version>${junit.jupiter.version}</version>
+    		<scope>test</scope>
+		</dependency>
+		<dependency>
+      		<groupId>org.junit.jupiter</groupId>
+      		<artifactId>junit-jupiter-engine</artifactId>
+      		<version>${junit.jupiter.version}</version>
+      		<scope>test</scope>
+    	</dependency>
+    </dependencies>
     
     <build>
         <plugins>
