--- a/app3/pom.xml
+++ b/app3/pom.xml
@@ -62,11 +62,27 @@
                 <configuration>
                   <archive>
                     <manifest>
-                        <mainClass>com.mycompany.app2.App2</mainClass>
+                        <mainClass>com.mycompany.app3.App3</mainClass>
                     </manifest>
                   </archive>
                 </configuration>
            </plugin>
+           
+           <!-- à lancer via mvn assembly:single -->
+           <plugin>
+		      <artifactId>maven-assembly-plugin</artifactId>
+		      <configuration>
+		        <archive>
+		          <manifest>
+		            <mainClass>com.mycompany.app3.App3</mainClass>
+		          </manifest>
+		        </archive>
+		        <descriptorRefs>
+		          <descriptorRef>jar-with-dependencies</descriptorRef>
+		        </descriptorRefs>
+		      </configuration>
+    	</plugin>
+           
         </plugins>
     </build>
     
