junit5 ok avec maven

--- a/app3/pom.xml
+++ b/app3/pom.xml
@@ -55,6 +55,14 @@
     
     <build>
         <plugins>
+        
+        	<!-- Need at least 2.22.0 to support JUnit 5 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M4</version>
+            </plugin>
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
